--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/styles": "^5.15.8",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
