--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "@fullcalendar/timegrid": "^6.1.10",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/styles": "^5.15.8",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.3",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.21.3"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
