--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
+    "react-toastify": "^10.0.5",
+    "sonner": "^1.5.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
