--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@mui/material": "^5.15.7",
     "@mui/styles": "^5.15.8",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.3",
     "json-server": "^1.0.0-alpha.23",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -38,9 +41,12 @@
     "react-router-dom": "^6.21.3",
     "react-toastify": "^11.0.3",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^22.13.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-modal": "^3.16.3",
